fix: 完善sql解析问题